chore: fix version

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-CasparCG Server 2.1.11 NRK
+CasparCG Server 2.1.x-dev NRK
 ============================
 
 Thank you for your interest in CasparCG Server, a professional software used to
